tests/gen-derivation/derivation/norec noext w_dep_cons_param 002-neg/expected
Error: While processing right hand side of checkedGen. Error during reflection: Target type's argument must be a variable name

DerivedGen:12:27--12:31
 08 | 
 09 | %language ElabReflection
 10 | 
 11 | export
 12 | checkedGen : Fuel -> Gen (Bool, Bool)
                                ^^^^

Error: Undefined name main. 
Did you mean: min?
